--- a/index(3).html
+++ b/index(3).html
@@ -8,7 +8,7 @@
         <div id="more" class="col-12 col-lg-6">
             <h2>Favourite Music Artists</h2>
             <ul>
-                <li>Tristen</li>
+                <li>Tristn</li>
                 <li>Olivia</li>
                 <li>Minaj</li>
                 <li>Aurora</li>
