Little Lemon Alerts
To notify clients restaurant will be closed.

--- a/index (2).html
+++ b/index (2).html
@@ -40,7 +40,7 @@
                 <h2>Pasta Salad</h2>
                 <p>Lettuce, vegetables, mozzarella.</p>
                 <h2>Greek Salad</h2>
-                <p>Cucumbers, onion, feta cheese.</p>
+                <p>Cucumber, onion, feta cheese.</p>
             </div>
         </div>
     </div>
