--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
            <li>Titanic</li>
            <li>Fatale</li>
            <li>Maverick</li>
-           <li>The Mother</li>
+           <li>Mother</li>
            <li>Warrior Nun</li>
         </ol>
         
